# telemon

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  config.example.yml  config.new.port.yml  install.sh
.github/workflows/: ci.yml  docker-images.yml
crates/telemon-cli/: Cargo.toml
crates/telemon-cli/src/: main.rs
crates/telemon-collectors/: Cargo.toml
crates/telemon-collectors/src/: fake.rs  lib.rs  traits.rs
crates/telemon-collectors/src/game/: capture.rs  gamescope_wayland.rs  live_window.rs  mangoapp.rs  mod.rs  steam.rs
crates/telemon-collectors/src/gpu/: mod.rs
crates/telemon-collectors/src/gpu/nvidia/: collector.rs  fake_provider.rs  mod.rs  model.rs  nvml_ffi.rs  nvml_loader.rs  provider.rs  test_provider.rs
crates/telemon-collectors/src/linux/: amdgpu.rs  drm.rs  gamescope.rs  gpu_discovery.rs  mod.rs  power_supply.rs
crates/telemon-collectors/src/macos/: exact_temperature_experimental.rs  macmon.rs  mod.rs  thermal_provider.rs  thermal_state.rs
crates/telemon-collectors/src/system/: collector.rs  mod.rs  model.rs
crates/telemon-collectors/src/temperature/: linux_hwmon.rs  mod.rs  model.rs
crates/telemon-collectors/src/windows/: baseline.rs  inventory.rs  lhm_http.rs  lhm_wmi.rs  mod.rs
crates/telemon-core/: Cargo.toml
crates/telemon-core/src/: config.rs  logging.rs
crates/telemon-core/src/metrics/: encode.rs  mod.rs  model.rs  names.rs
crates/telemon-exporter/: Cargo.toml
crates/telemon-exporter/src/: adaptive.rs  cache.rs  cli.rs  diagnostics.rs  fps.rs  game_state.rs  hardware_inspect.rs  http.rs  lib.rs  macmon_json.rs  main.rs  registration.rs  runtime.rs  runtime_diagnostics.rs  scheduler.rs
crates/telemon-exporter/src/service/: mod.rs  stub.rs  windows.rs
crates/telemon-registry/: Cargo.toml
crates/telemon-registry/src/: cli.rs  lib.rs  main.rs  registry.rs
deploy/: README.md  docker-compose.local-build.yml  docker-compose.yml
deploy/exporter/: Dockerfile  README.md  UNRAID_OMV_VALIDATION.md  docker-compose.production.yml  docker-compose.unraid-test.yml  docker-compose.yml  entrypoint.sh  unraid-template.xml
deploy/grafana/dashboards/: telemon-gpu.json  telemon-overview.json  telemon-temperature.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/registry/: Dockerfile  config.yml
docs/: github-ghcr.md  install-bootstrap.md  install-linux.md  install-macos.md  install-windows.md  issue-template.md  macos-test-cleanup.md  prometheus-metrics.csv  prometheus-metrics.md  steamdeck-install.md  troubleshooting.md  uninstall.md
packaging/: README.md
packaging/linux/: install.sh  package-deb.sh  telemon-exporter-setup  telemon-exporter.service  uninstall.sh
packaging/linux/deb/: conffiles  control  postinst  postrm  prerm
packaging/macos/: README.md  com.telemon.exporter.plist  config.default.yml  install.sh  service-smoke-test.sh  uninstall.sh
packaging/steamdeck/: telemon-exporter.service.template
packaging/windows/: README.md  config.default.yml  install-service.ps1  service-smoke-test.ps1  uninstall-service.ps1
scripts/: build-release.sh  check-packaging-files.sh  collect-debug-info.sh  install-steamdeck.sh  package-all-local.sh  smoke-test.sh
tests/fixtures/hwmon/hwmon2/: name
