[package]
name = "telemon-collectors"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
libloading.workspace = true
serde.workspace = true
telemon-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
] }
