[package]
name = "telemon-exporter"
version.workspace = true
edition.workspace = true

[features]
default = []
macos-macmon = ["telemon-collectors/macos-macmon"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
telemon-collectors.workspace = true
telemon-core.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service.workspace = true

[[bin]]
name = "telemon-exporter"
path = "src/main.rs"
