[package]
name = "telemon-registry"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
telemon-core.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[[bin]]
name = "telemon-registry"
path = "src/main.rs"

